<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#120103"
    tools:context=".HomeActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="327dp"
        android:layout_height="6dp"
        android:background="@android:color/holo_green_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953" />

    <Button
        android:id="@+id/multi"
        android:layout_width="175dp"
        android:layout_height="51dp"
        android:layout_marginBottom="556dp"
        android:background="@drawable/buttonshape"
        android:padding="10dp"
        android:text="@string/multi_player_mode"
        android:textColor="@android:color/primary_text_light_nodisable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/vsAndroid"
        android:layout_width="175dp"
        android:layout_height="51dp"
        android:layout_marginBottom="424dp"
        android:background="@drawable/buttonshape"
        android:padding="10dp"
        android:text="@string/vs_android_mode"
        android:textColor="@android:color/primary_text_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/multi"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/multi"
        app:layout_constraintTop_toBottomOf="@+id/multi"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/rate_us_btn"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:layout_marginBottom="192dp"
        android:background="@drawable/buttonshape"
        android:padding="5dp"
        android:text="@string/rate_us"
        android:textColor="@android:color/primary_text_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/settings_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/settings_btn"
        app:layout_constraintTop_toBottomOf="@+id/settings_btn"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/settings_btn"
        android:layout_width="174dp"
        android:layout_height="41dp"
        android:layout_marginBottom="308dp"
        android:background="@drawable/buttonshape"
        android:text="@string/settings"
        android:textColor="@android:color/primary_text_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/vsAndroid"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/vsAndroid"
        app:layout_constraintTop_toBottomOf="@+id/vsAndroid"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="327dp"
        android:layout_height="6dp"
        android:background="@android:color/holo_green_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />
</androidx.constraintlayout.widget.ConstraintLayout>