<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/xwins"
            android:layout_width="149dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:text="@string/x_points_0"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="33sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/owins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o_points_0"
            android:textStyle="bold"
            android:textAlignment="center"
            android:fontFamily="sans-serif-black"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="33sp"
            android:layout_weight="1">

        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:text="@string/reset"
            android:textColor="#000"
            android:background="@android:color/holo_blue_bright"
            android:textSize="23sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp">

        <Button
            android:id="@+id/button00"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="33sp"
            android:background="@android:color/holo_blue_dark"
            android:layout_margin="2dp">

        </Button>

        <Button
            android:id="@+id/button01"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:textSize="33sp"
            android:background="@android:color/holo_blue_dark">

        </Button>
        <Button
            android:id="@+id/button02"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="33sp"
            android:layout_margin="2dp"
            android:background="@android:color/holo_blue_dark">

        </Button>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp">
        <Button
            android:id="@+id/button10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="33sp"
            android:layout_margin="2dp"
            android:background="@android:color/holo_blue_dark">

        </Button>
        <Button
            android:id="@+id/button11"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="33sp"
            android:layout_margin="2dp"
            android:background="@android:color/holo_blue_dark">

        </Button>
        <Button
            android:id="@+id/button12"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="33sp"
            android:layout_margin="2dp"
            android:background="@android:color/holo_blue_dark">

        </Button>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp">
        <Button
            android:id="@+id/button20"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="33sp"
            android:layout_margin="2dp"
            android:background="@android:color/holo_blue_dark">

        </Button>
        <Button
            android:id="@+id/button21"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="33sp"
            android:layout_margin="2dp"
            android:background="@android:color/holo_blue_dark">

        </Button>

        <Button
            android:id="@+id/button22"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_dark"
            android:textSize="33sp">

        </Button>

    </LinearLayout>
</LinearLayout>