<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_marginTop="3dp"
android:background="#120103"
android:padding="3dp">

<TextView
    android:id="@+id/lineTop"
    android:layout_width="0dp"
    android:layout_height="6dp"
    android:layout_marginStart="42dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="42dp"
    android:background="@android:color/holo_green_light"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.6"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<ImageView
    android:id="@+id/imageView19"
    android:layout_width="114dp"
    android:layout_height="25dp"
    android:contentDescription="@string/notUsed"
    app:layout_constraintBottom_toTopOf="@+id/lineBottom"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.525"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/lineTop"
    app:layout_constraintVertical_bias="0.448"
    app:srcCompat="@drawable/pencilside" />

<ImageView
    android:id="@+id/imageView18"
    android:layout_width="114dp"
    android:layout_height="25dp"
    android:contentDescription="@string/notUsed"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.989"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.44"
    app:srcCompat="@drawable/pencilleft" />

<ImageView
    android:id="@+id/imageView17"
    android:layout_width="118dp"
    android:layout_height="25dp"
    android:contentDescription="@string/notUsed"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/imageView8"
    app:layout_constraintHorizontal_bias="0.705"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.44"
    app:srcCompat="@drawable/pencilside" />

<ImageView
    android:id="@+id/imageView16"
    android:layout_width="25dp"
    android:layout_height="118dp"
    android:contentDescription="@string/notUsed"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.7"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.32"
    app:srcCompat="@drawable/pencil" />

<ImageView
    android:id="@+id/imageView15"
    android:layout_width="25dp"
    android:layout_height="118dp"
    android:contentDescription="@string/notUsed"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.336"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.32"
    app:srcCompat="@drawable/pencil" />

<ImageView
    android:id="@+id/imageView14"
    android:layout_width="114dp"
    android:layout_height="25dp"
    android:contentDescription="@string/notUsed"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.98"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.238"
    app:srcCompat="@drawable/pencilleft" />

<ImageView
    android:id="@+id/imageView13"
    android:layout_width="114dp"
    android:layout_height="25dp"
    android:contentDescription="@string/notUsed"
    app:layout_constraintBottom_toTopOf="@+id/lineBottom"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.521"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/lineTop"
    app:layout_constraintVertical_bias="0.226"
    app:srcCompat="@drawable/pencilside" />

<ImageView
    android:id="@+id/imageView11"
    android:layout_width="15dp"
    android:layout_height="20dp"
    android:padding="1dp"
    android:src="@drawable/circle_cropped"
    android:contentDescription="@string/notUsed"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.691"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.444" />

<ImageView
    android:id="@+id/imageView10"
    android:layout_width="15dp"
    android:layout_height="20dp"
    android:padding="1dp"
    android:src="@drawable/circle_cropped"
    android:contentDescription="@string/notUsed"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.34"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.444" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="15dp"
        android:layout_height="20dp"
        android:contentDescription="@string/notUsed"
        android:padding="1dp"
        android:src="@drawable/circle_cropped"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.696"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241" />

    <ImageView
    android:id="@+id/imageView7"
    android:layout_width="25dp"
    android:layout_height="118dp"
    android:contentDescription="@string/notUsed"
    app:layout_constraintBottom_toBottomOf="@+id/imageView6"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.696"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/imageView6"
    app:layout_constraintVertical_bias="0.0"
    app:srcCompat="@drawable/pencil" />

<ImageView
    android:id="@+id/imageView4"
    android:layout_width="25dp"
    android:layout_height="118dp"
    android:contentDescription="@string/notUsed"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.696"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.549"
    app:srcCompat="@drawable/pencil106" />

<TextView
    android:id="@+id/lineBottom"
    android:layout_width="327dp"
    android:layout_height="6dp"
    android:background="@android:color/holo_green_light"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.535"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.953" />

<ImageView
    android:id="@+id/imageView3"
    android:layout_width="25dp"
    android:layout_height="118dp"
    android:contentDescription="@string/notUsed"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.339"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.549"
    app:srcCompat="@drawable/pencil106" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="25dp"
        android:layout_height="118dp"
        android:contentDescription="@string/notUsed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.336"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083"
        app:srcCompat="@drawable/pencil" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="15dp"
        android:layout_height="20dp"
        android:contentDescription="@string/notUsed"
        android:padding="1dp"
        android:src="@drawable/circle_cropped"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241" />

    <ImageView
    android:id="@+id/imageView12"
    android:layout_width="118dp"
    android:layout_height="25dp"
    android:contentDescription="@string/notUsed"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/imageView8"
    app:layout_constraintHorizontal_bias="0.761"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.238"
    app:srcCompat="@drawable/pencilside" />

<Button
    android:id="@+id/button00"
    android:layout_width="107dp"
    android:layout_height="112dp"
    android:background="@drawable/buttonshape2"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.052"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.089" />
<Button
    android:id="@+id/button01"
    android:layout_width="107dp"
    android:layout_height="112dp"
    android:background="@drawable/buttonshape2"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.516"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.089" />

<Button
    android:id="@+id/button02"
    android:layout_width="107dp"
    android:layout_height="112dp"
    android:background="@drawable/buttonshape2"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.98"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.092" />

<Button
    android:id="@+id/button10"
    android:layout_width="107dp"
    android:layout_height="112dp"
    android:background="@drawable/buttonshape2"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.052"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.319" />

<Button
    android:id="@+id/button11"
    android:layout_width="107dp"
    android:layout_height="112dp"
    android:background="@drawable/buttonshape2"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.529"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.321" />

<Button
    android:id="@+id/button20"
    android:layout_width="107dp"
    android:layout_height="112dp"
    android:background="@drawable/buttonshape2"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.062"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.553" />

<Button
    android:id="@+id/button12"
    android:layout_width="107dp"
    android:layout_height="112dp"
    android:background="@drawable/buttonshape2"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.98"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.319" />

    <Button
        android:id="@+id/button21"
        android:layout_width="100dp"
        android:layout_height="112dp"
        android:background="@drawable/buttonshape2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.553" />

    <Button
    android:id="@+id/button22"
    android:layout_width="107dp"
    android:layout_height="112dp"
    android:background="@drawable/buttonshape2"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.98"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.553" />

<TextView
    android:id="@+id/xwins"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="@font/architects_daughter"
    android:text="@string/x_wins"
    android:textAlignment="center"
    android:textColor="@android:color/holo_red_dark"
    android:textSize="33sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.043"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.718" />

<TextView
    android:id="@+id/owins"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:fontFamily="@font/architects_daughter"
    android:text="@string/o_wins"
    android:textAlignment="center"
    android:textColor="@android:color/holo_red_dark"
    android:textSize="33sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.536"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.716" />

<TextView
    android:id="@+id/draw"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:fontFamily="@font/architects_daughter"
    android:text="@string/draw"
    android:textAlignment="center"
    android:textColor="@android:color/holo_red_dark"
    android:textSize="33sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.95"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.715" />

    <Button
        android:id="@+id/reset"
        android:layout_width="112dp"
        android:layout_height="56dp"
        android:background="@drawable/buttonshape"
        android:padding="5dp"
        android:text="@string/reset"
        android:textColor="#000"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855" />

    <Button
        android:id="@+id/settings"
        android:layout_width="69dp"
        android:layout_height="25dp"
        android:background="@drawable/buttonshape"
        android:padding="4dp"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.885"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.911" />


</androidx.constraintlayout.widget.ConstraintLayout>